objects/GEMS_Custom_ID_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Custom_ID_Request_Form_Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Setup_OSS_User_Email__c</fullName>
        <label>Account Setup/OSS User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Setup_OSS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Setup/OSS User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Account_Setup_OSS_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Specialist_Email_ID__c</fullName>
        <label>Account Specialist Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Update to existing Account with Full Reissuance</fullName>
                </value>
                <value>
                    <fullName>Update to existing Account with Partial Reissuance</fullName>
                </value>
                <value>
                    <fullName>Update to existing Account w/out Reissuance</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_comments_or_instructions__c</fullName>
        <label>Additional comments or instructions</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Network__c</fullName>
        <inlineHelpText>Network logo will appear in “Plan Logo E” space</inlineHelpText>
        <label>Alternative Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicable_BAs__c</fullName>
        <label>Applicable BAs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_GSs__c</fullName>
        <label>Applicable GSs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Custom_Carrier_Message__c</fullName>
        <inlineHelpText>Max. 400 characters</inlineHelpText>
        <label>Approved Custom Carrier Message</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Agreement</fullName>
                </value>
                <value>
                    <fullName>Group Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BAs_Product_Type__c</fullName>
        <label>Product Type</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Card_Back_Message__c</fullName>
        <inlineHelpText>Max. 350 characters; All custom language must be approved by Legal.</inlineHelpText>
        <label>Card Back Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Back_Message_long__c</fullName>
        <inlineHelpText>Max. 350 characters; All custom language must be approved by Legal.</inlineHelpText>
        <label>Card Back Message</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carved_Out_Rx_Vendor_s_Name__c</fullName>
        <label>Carved Out Rx Vendor&apos;s Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Custom_Website__c</fullName>
        <label>Client Custom Website</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoPay_Label_1__c</fullName>
        <label>CoPay Label #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency Room</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
                <value>
                    <fullName>Preventative Care</fullName>
                </value>
                <value>
                    <fullName>Retail RX Copay</fullName>
                </value>
                <value>
                    <fullName>RX After Ded %</fullName>
                </value>
                <value>
                    <fullName>RX Brand Copay</fullName>
                </value>
                <value>
                    <fullName>RX Copay</fullName>
                </value>
                <value>
                    <fullName>RX Formulary</fullName>
                </value>
                <value>
                    <fullName>RX Generic Copay</fullName>
                </value>
                <value>
                    <fullName>RX Non-Formulary</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Urgent Care</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoPay_Label_1_value__c</fullName>
        <label>CoPay Label #1 value</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoPay_Label_2_value__c</fullName>
        <label>CoPay Label #2 value</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoPay_Label_3_value__c</fullName>
        <label>CoPay Label #3 value</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combine_Health_Dental_Cards_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combine Health &amp; Dental Cards N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combine_Health_Dental_Cards_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combine Health &amp; Dental Cards No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combine_Health_Dental_Cards__c</fullName>
        <label>Combine Health &amp; Dental Cards?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, meets requirements outlined below</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combine_Health_Dental_Cards_yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combine Health &amp; Dental Cards yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_1_Other__c</fullName>
        <label>Copay #1 Other</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_2_Other__c</fullName>
        <label>Copay #2 Other</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_3_Other__c</fullName>
        <label>Copay #3 Other</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Amount_1__c</fullName>
        <label>Copay Amount #1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Amount_2__c</fullName>
        <label>Copay Amount #2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Amount_3__c</fullName>
        <label>Copay Amount #3</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Label_2__c</fullName>
        <label>Copay Label #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency Room</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
                <value>
                    <fullName>Preventative Care</fullName>
                </value>
                <value>
                    <fullName>Retail RX Copay</fullName>
                </value>
                <value>
                    <fullName>RX After Ded %</fullName>
                </value>
                <value>
                    <fullName>RX Brand Copay</fullName>
                </value>
                <value>
                    <fullName>RX Copay</fullName>
                </value>
                <value>
                    <fullName>RX Formulary</fullName>
                </value>
                <value>
                    <fullName>RX Generic Copay</fullName>
                </value>
                <value>
                    <fullName>RX Non-Formulary</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Urgent Care</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Label_3__c</fullName>
        <label>Copay Label #3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency Room</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
                <value>
                    <fullName>Preventative Care</fullName>
                </value>
                <value>
                    <fullName>Retail RX Copay</fullName>
                </value>
                <value>
                    <fullName>RX After Ded %</fullName>
                </value>
                <value>
                    <fullName>RX Brand Copay</fullName>
                </value>
                <value>
                    <fullName>RX Copay</fullName>
                </value>
                <value>
                    <fullName>RX Formulary</fullName>
                </value>
                <value>
                    <fullName>RX Generic Copay</fullName>
                </value>
                <value>
                    <fullName>RX Non-Formulary</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Urgent Care</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Face_Message_2__c</fullName>
        <label>Custom Face Message 2</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_ID_Request_Form_Case__c</fullName>
        <label>Custom ID Request Form Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Custom ID Request Forms</relationshipLabel>
        <relationshipName>GEMS_Custom_ID_Request_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Custom_Website__c</fullName>
        <label>Custom Website</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_face_message_1__c</fullName>
        <label>Custom Face Message 1</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GEMS Custom ID Request Forms</relationshipLabel>
        <relationshipName>GEMS_Custom_ID_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Number__c</fullName>
        <formula>GEMS_Account_Name__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Sales_Acct_Mgr_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales/Acct Mgr/Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Custom_ID_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_a_custom_card_carrier__c</fullName>
        <inlineHelpText>Must be submitted as graphic and approved by Legal</inlineHelpText>
        <label>Include a custom card carrier?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_a_custom_web_address_extension_o__c</fullName>
        <inlineHelpText>Reference Field 59 above magnetic stripe</inlineHelpText>
        <label>Include a custom web address extension o</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, list custom website up to 28 characters</fullName>
                </value>
                <value>
                    <fullName>No, use standard www.bcbsXX.com (where XX is applicable state’s prefix)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_client_web_address__c</fullName>
        <inlineHelpText>Reference Field 70 below the phone numbers</inlineHelpText>
        <label>Include client web address?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, list custom website</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issuance_Type__c</fullName>
        <label>Issuance Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Issuance</fullName>
                </value>
                <value>
                    <fullName>Partial Issuance</fullName>
                </value>
                <value>
                    <fullName>Maintenance Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_a_BCBS_product_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if applicable</inlineHelpText>
        <label>Not a BCBS product #1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_a_BCBS_product_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if applicable</inlineHelpText>
        <label>Not a BCBS product #2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_a_BCBS_product_3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if applicable</inlineHelpText>
        <label>Not a BCBS product #3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Alternative_Network__c</fullName>
        <label>Other Alternative Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem BCBS of Georgia - Blue Open Access POS</fullName>
                </value>
                <value>
                    <fullName>Anthem BCBS of Missouri - Blue Access Choice</fullName>
                </value>
                <value>
                    <fullName>Anthem BCBS of Missouri - Blue Preferred POS</fullName>
                </value>
                <value>
                    <fullName>Anthem BCBS of Wisconsin - Blue Preferred POS</fullName>
                </value>
                <value>
                    <fullName>Anthem California Cross - Select PPO</fullName>
                </value>
                <value>
                    <fullName>Anthem Empire - Empire POS</fullName>
                </value>
                <value>
                    <fullName>Anthem New Hampshire - BlueChoice Open Access POS</fullName>
                </value>
                <value>
                    <fullName>Arizona - Blue Alternative</fullName>
                </value>
                <value>
                    <fullName>BCBS of Kansas City - Preferred-Care Blue</fullName>
                </value>
                <value>
                    <fullName>Florida Blue - Network Blue</fullName>
                </value>
                <value>
                    <fullName>Horizon BCBS of New Jersey - Horizon Managed Care Network</fullName>
                </value>
                <value>
                    <fullName>Maryland/DC - BlueChoice Adv Open Access</fullName>
                </value>
                <value>
                    <fullName>Minnesota - Group Value Network</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania – Highmark - Community Blue Network</fullName>
                </value>
                <value>
                    <fullName>Tennessee - Network S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_ID_Card_Case_Number__c</fullName>
        <formula>Custom_ID_Request_Form_Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID Card Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID_Card_Case_Url__c</fullName>
        <label>Parent ID Card Case Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <inlineHelpText>No letters only digits</inlineHelpText>
        <label>Phone #1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <inlineHelpText>No letters only digits</inlineHelpText>
        <label>Phone #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <inlineHelpText>No letters only digits</inlineHelpText>
        <label>Phone #3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Label_1__c</fullName>
        <inlineHelpText>Max. 16 characters for phone label</inlineHelpText>
        <label>Phone Label #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                    <default>true</default>
                    <label>Customer Service</label>
                </value>
                <value>
                    <fullName>Blue Care Connect</fullName>
                </value>
                <value>
                    <fullName>Blue Care Access</fullName>
                </value>
                <value>
                    <fullName>Condition Mgmt.</fullName>
                </value>
                <value>
                    <fullName>Maternity Program</fullName>
                </value>
                <value>
                    <fullName>24/7 Nurseline</fullName>
                </value>
                <value>
                    <fullName>DNoA Pref Network</fullName>
                </value>
                <value>
                    <fullName>Guest Membership</fullName>
                </value>
                <value>
                    <fullName>Preauth-Medical</fullName>
                </value>
                <value>
                    <fullName>Preauth-MH/CD</fullName>
                </value>
                <value>
                    <fullName>Provider Finder</fullName>
                </value>
                <value>
                    <fullName>Provider Locator</fullName>
                </value>
                <value>
                    <fullName>Provider Service</fullName>
                </value>
                <value>
                    <fullName>EAP*</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>RX Tech Support</fullName>
                </value>
                <value>
                    <fullName>RX Cust Svc*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Label_2__c</fullName>
        <inlineHelpText>Max. 16 characters for phone label</inlineHelpText>
        <label>Phone Label #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Care Connect</fullName>
                </value>
                <value>
                    <fullName>Blue Care Access</fullName>
                </value>
                <value>
                    <fullName>Condition Mgmt.</fullName>
                </value>
                <value>
                    <fullName>Maternity Program</fullName>
                </value>
                <value>
                    <fullName>24/7 Nurseline</fullName>
                </value>
                <value>
                    <fullName>DNoA Pref Network</fullName>
                </value>
                <value>
                    <fullName>Guest Membership</fullName>
                </value>
                <value>
                    <fullName>Preauth-Medical</fullName>
                </value>
                <value>
                    <fullName>Preauth-MH/CD</fullName>
                </value>
                <value>
                    <fullName>Provider Finder</fullName>
                </value>
                <value>
                    <fullName>Provider Locator</fullName>
                </value>
                <value>
                    <fullName>Provider Service</fullName>
                </value>
                <value>
                    <fullName>EAP*</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>RX Tech Support</fullName>
                </value>
                <value>
                    <fullName>RX Cust Svc*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Label_3__c</fullName>
        <inlineHelpText>Max. 16 characters for phone label</inlineHelpText>
        <label>Phone Label #3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Care Connect</fullName>
                </value>
                <value>
                    <fullName>Blue Care Access</fullName>
                </value>
                <value>
                    <fullName>Condition Mgmt.</fullName>
                </value>
                <value>
                    <fullName>Maternity Program</fullName>
                </value>
                <value>
                    <fullName>24/7 Nurseline</fullName>
                </value>
                <value>
                    <fullName>DNoA Pref Network</fullName>
                </value>
                <value>
                    <fullName>Guest Membership</fullName>
                </value>
                <value>
                    <fullName>Preauth-Medical</fullName>
                </value>
                <value>
                    <fullName>Preauth-MH/CD</fullName>
                </value>
                <value>
                    <fullName>Provider Finder</fullName>
                </value>
                <value>
                    <fullName>Provider Locator</fullName>
                </value>
                <value>
                    <fullName>Provider Service</fullName>
                </value>
                <value>
                    <fullName>EAP*</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>RX Tech Support</fullName>
                </value>
                <value>
                    <fullName>RX Cust Svc*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Label_Value_1__c</fullName>
        <label>Phone Label Value #1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Label_Value_2__c</fullName>
        <label>Phone Label Value #2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Label_Value_3__c</fullName>
        <label>Phone Label Value #3</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_C_S_alpha_prefix_on_card__c</fullName>
        <inlineHelpText>Reference field 3.5</inlineHelpText>
        <label>Print C/S alpha prefix on card?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Carve_Out_Rx_Vendor_Logo__c</fullName>
        <label>Carved Out Rx Vendor Logo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Client_Logo__c</fullName>
        <inlineHelpText>Submit Logo in correct format</inlineHelpText>
        <label>Print Client Logo?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Company_Name_Other__c</fullName>
        <label>Print Company Name Other</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Company_Name_Value1__c</fullName>
        <inlineHelpText>Reference field 25, which has a 35 character max</inlineHelpText>
        <label>Print Company Name Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Name in BlueStar</fullName>
                </value>
                <value>
                    <fullName>Group/Section Name in BlueStar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Company_Name_Value__c</fullName>
        <inlineHelpText>Specify Company name</inlineHelpText>
        <label>Print Company Name Value</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Company_Name__c</fullName>
        <inlineHelpText>Reference field 24, which has a 35 character max</inlineHelpText>
        <label>Print Company Name?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Company_Plan_Name_Other__c</fullName>
        <label>Print Company/Plan Name Other</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Company_Plan_Name_Value__c</fullName>
        <inlineHelpText>Reference field 25, which has a 35 character max</inlineHelpText>
        <label>Print Company/Plan Name Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan Name listed in BlueStar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Company_Plan_Name__c</fullName>
        <inlineHelpText>Reference field 25, which has a 35 character max</inlineHelpText>
        <label>Print Company/Plan Name?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Custom_alpha_prefix_on_card__c</fullName>
        <label>Print Custom alpha prefix on card</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_FAMILY_SINGLE_Coverage_on_card__c</fullName>
        <inlineHelpText>Reference field 19</inlineHelpText>
        <label>Print FAMILY/SINGLE Coverage on card?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes(standard)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A when IDs are issued at the member level</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_custom_face_message_s_on_front__c</fullName>
        <inlineHelpText>Reference fields 22 &amp; 23 (max. 26 characters)</inlineHelpText>
        <label>Print custom face message(s) on front?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Submitted__c</fullName>
        <label>Re-Submitted</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Re_Submitted_Field__c</fullName>
        <description>0.04076 - more than 1 min diff
0.04099 - exact 1 min</description>
        <formula>LastModifiedDate - 0.04099</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reset Re-Submitted Field</label>
        <type>DateTime</type>
    </fields>
</CustomObject>